test/unittest/error/tst.DTRACEFLT_BADADDR.r
The arguments are 2 1 16 1 0
The value of arg4 should be 1
The value of arg5 should be 0

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #1 at DIF offset 16
